objects/ASI_CRM_Sub_Brand_Grade__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_City_Tier__c</fullName>
        <label>City Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Incentive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incentive for BRSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Chinese_Description__c</fullName>
        <label>Chinese Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_Key__c</fullName>
        <formula>IF(RecordType.DeveloperName =&apos;ASI_CRM_CN_Sub_brand_Grade&apos;, Name ,  IF(RecordType.DeveloperName =&apos;ASI_CRM_CN_Sub_brand_Grade_Heavy_Contract_ON&apos;,  ASI_CRM_Sub_Brand_Grade__r.Name &amp;  TEXT(ASI_CRM_Region__c) &amp; TEXT(ASI_CRM_Commercial_Team__c), &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grade_Code__c</fullName>
        <label>Grade Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_for_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incentive for PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Max_Incentive__c</fullName>
        <defaultValue>999999</defaultValue>
        <label>Max Incentive for BRSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Max_Incentive_for_PSF__c</fullName>
        <defaultValue>999999</defaultValue>
        <label>Max Incentive for PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Region</fullName>
                </value>
                <value>
                    <fullName>North Region</fullName>
                </value>
                <value>
                    <fullName>South Region</fullName>
                </value>
                <value>
                    <fullName>East Region</fullName>
                </value>
                <value>
                    <fullName>South West Region</fullName>
                </value>
                <value>
                    <fullName>North West Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand_Grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Grade</label>
        <referenceTo>ASI_CRM_Sub_Brand_Grade__c</referenceTo>
        <relationshipLabel>Sub-brand Grade Lines</relationshipLabel>
        <relationshipName>Sub_brand_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sub-brand Grade</label>
    <listViews>
        <fullName>ASI_CRM_CN_Sub_brand_Grade</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_Grade_Code__c</columns>
        <columns>ASI_CRM_CN_Incentive__c</columns>
        <columns>ASI_CRM_Max_Incentive__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Sub_Brand_Grade__c.ASI_CRM_CN_Sub_brand_Grade</value>
        </filters>
        <label>CN Sub-brand Grade</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_SubBrand_Grade</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_Grade_Code__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Sub_Brand_Grade__c.ASI_CRM_MY_Sub_brand_Grade</value>
        </filters>
        <label>MY Sub-brand Grade</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Sub_brand_Grade_HCO</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_Sub_Brand_Grade__c</columns>
        <columns>ASI_CRM_Grade_Code__c</columns>
        <columns>ASI_CRM_Max_Incentive__c</columns>
        <columns>ASI_CRM_CN_Incentive__c</columns>
        <columns>ASI_CRM_Max_Incentive_for_PSF__c</columns>
        <columns>ASI_CRM_Incentive_for_PSF__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Sub_Brand_Grade__c.ASI_CRM_CN_Sub_brand_Grade_Heavy_Contract_ON</value>
        </filters>
        <label>CN Sub-brand Grade(HCO)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sub-Brand Grade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-brand Grades</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sub_brand_Grade</fullName>
        <active>true</active>
        <label>CN Sub-brand Grade</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sub_brand_Grade_Heavy_Contract_ON</fullName>
        <active>true</active>
        <description>It is for the incentives to be customized by regions.</description>
        <label>CN Sub-brand Grade (Heavy Contract ON)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Sub_brand_Grade</fullName>
        <active>true</active>
        <label>ASI CRM MY Sub brand Grade</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>